Fix incorrectly-named vertical spacing variables

--- a/scss/_base_tables.scss
+++ b/scss/_base_tables.scss
@@ -30,7 +30,7 @@
     th {
       @extend %muted-heading;
       line-height: map-get($line-heights, small);
-      padding-bottom: $spv-inner--medium - map-get($nudges, nudge--small);
+      padding-bottom: $spv-inner--large - map-get($nudges, nudge--small);
     }
 
     tr {
