--- a/scss/_patterns_card.scss
+++ b/scss/_patterns_card.scss
@@ -13,7 +13,7 @@
     @extend %vf-card;
     @extend %vf-is-bordered;
     @extend %vf-has-round-corners;
-    padding: calc(#{$spv-inner--medium} - 1px);
+    padding: calc(#{$spv-inner--large} - 1px);
   }
 }
 
@@ -35,7 +35,7 @@
     color: $color-dark;
     margin-bottom: $spv-outer--scaleable;
     overflow: auto;
-    padding: $spv-inner--medium;
+    padding: $spv-inner--large;
   }
 }
 
@@ -46,7 +46,7 @@
     @extend %vf-has-round-corners;
     margin-bottom: $spv-outer--scaleable;
     overflow: auto;
-    padding: $spv-inner--medium;
+    padding: $spv-inner--large;
   }
 }
 
@@ -130,7 +130,7 @@
 
   .p-card__header {
     border-bottom: 1px solid $color-mid-light;
-    margin-bottom: $spv-inner--medium;
+    margin-bottom: $spv-inner--large;
 
     > .p-link--soft {
       display: inline-block;
@@ -144,7 +144,7 @@
 
   .p-card__header {
     border-bottom: 1px solid $color-mid-light;
-    margin-bottom: $spv-inner--medium;
+    margin-bottom: $spv-inner--large;
 
     > .p-link--soft {
       display: inline-block;
