--- a/scss/_patterns_tabs.scss
+++ b/scss/_patterns_tabs.scss
@@ -57,7 +57,7 @@
     &__link {
       color: $color-x-dark;
       display: inline-block;
-      padding: $spv-inner--large $sph-inner;
+      padding: $spv-inner--medium $sph-inner;
 
       &:visited,
       &:active,
