--- a/scss/_settings_spacing.scss
+++ b/scss/_settings_spacing.scss
@@ -51,9 +51,9 @@ $spv-nudge-compensation: $sp-unit - $spv-nudge !default;
 $spv-inner--x-small: $sp-unit * 0.5 !default; // buttons margins inside table,
 $spv-inner--x-small--scaleable: $spv-inner--x-small * $multi !default;
 $spv-inner--small: $sp-unit !default;
-$spv-inner--medium: $sp-unit * 2;
-$spv-inner--scaleable: $spv-inner--small * $multi !default;
-$spv-inner--large: $spv-inner--small * 1.5 !default; //vertical padding in: navigation, tabs
+$spv-inner--scaleable: $sp-unit * $multi !default;
+$spv-inner--medium: $sp-unit * 1.5 !default; //vertical padding in: navigation, tabs
+$spv-inner--large: $sp-unit * 2;
 
 // 1.2 Vertical spacing between components
 $spv-outer--small: $sp-unit * 1 !default; //labels
